--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lucide-react": "^0.263.1",
     "opencv.js": "^1.2.1",
     "openai": "^4.20.1",
-    "face-api.js": "^0.22.2"
+    "@vladmandic/face-api": "^1.7.13"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
