--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react-dom": "^18.2.0",
     "lucide-react": "^0.263.1",
     "opencv.js": "^1.2.1",
-    "openai": "^4.20.1",
-    "@vladmandic/face-api": "^1.7.13"
+    "openai": "^4.20.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
